--- a/css-practice/layout/1-column-layout01.html
+++ b/css-practice/layout/1-column-layout01.html
@@ -13,28 +13,25 @@
             width: 960px;
             height:100px;
             margin: 0 auto;
-            background: yellow;
-            text-align: center;
+            border: 1px solid red;
         }
         .content{
             width: 960px;
             height: 600px;
-            margin: 10px auto;
-            background: orange;
-            text-align: center;
+            margin: 5px auto;
+            border: 1px solid blue;
         }
         .footer{
             width:960px;
             height: 100px;
             margin:0 auto;
-            background: blue;
-            text-align: center;
+            border: 1px solid green;
         }
     </style>
 </head>
 <body>
-   <div class="header">header</div> 
-   <div class="content">content</div>
-   <div class="footer">footer</div>
+   <div class="header"></div> 
+   <div class="content"></div>
+   <div class="footer"></div>
 </body>
 </html>
