--- a/css-practice/layout/3-column-圣杯布局.html
+++ b/css-practice/layout/3-column-圣杯布局.html
@@ -12,6 +12,8 @@
             /* 为左右腾出空间 */
             padding-left:220px; 
             padding-right:220px;
+            /*也可以写成如下, 上右下左*/
+            /* padding: 0 220px 0;   */
         }
         .left{
             float:left;
