--- a/css-practice/examples/imooc/css/main2.css
+++ b/css-practice/examples/imooc/css/main2.css
@@ -35,8 +35,11 @@
     display:inline-block;
 }
 
-.header_right li a:hover,.on{
+.header_right li a:hover{
     text-decoration: none;
+    background-color:rgb(245, 117, 117);
+}
+.on{
     background-color: #c00;
 }
 
@@ -74,17 +77,13 @@
     text-decoration: none;
     color:white;
     display:inline-block;
+    width:100px;
     padding: 0 20px;
+    text-align: center;
 }
 
-
-.title li a:hover,.title_on{
-    background-color:#c00;
-}
-
-.title li a span{
-    display: inline-block;
-    padding: 0 30px;
+.title li a:hover{
+    background-color:rgb(245, 117, 117);
 }
 
 .course{
